--- a/lesson13/css/middle.css
+++ b/lesson13/css/middle.css
@@ -1,7 +1,6 @@
 @media only screen and (min-width:32.5em){
 
     main, footer{
-        /*max-width:1200PX;*/
         margin:0 auto;
     }
    
@@ -13,6 +12,8 @@
     }
     header img{
         width:100%;
+        max-width:100px;
+        margin-left:2rem;
     }
     /*css styling of navigation bar for large windows*/
     
@@ -47,8 +48,7 @@
     }
     .suites h3{
         text-align:center;
-        font-size:2rem;
-        
+        font-size:2rem;    
     }
     /*form and image in contact us page must float next to each other*/
    
@@ -57,6 +57,19 @@
     }
 
     /*css styling for home page*/
+    .temple_area img{
+        float:right;     
+    }
+   
+
+
+
+
+
+
+
+
+
     .townData{
         display: flex;
         flex-direction:column;
