--- a/lesson13/css/small.css
+++ b/lesson13/css/small.css
@@ -86,9 +86,7 @@ nav a:hover, .dropdown:hover .dropbtn{background-color:#dea325;
 nav a.active{background-color:#f41f31;
     color:white;
 }
-li.dropdown{
-    display:none;
-}
+
 .dropdown_content{
     display:none;
     position: absolute;
@@ -103,7 +101,7 @@ li.dropdown{
     text-align:center;
 }
 .dropdown_content a:hover{
-    background-color:#000;
+    background-color:#dea325;
 }
 .dropdown:hover .dropdown_content{
     display:block;
@@ -124,8 +122,6 @@ main h3{
     color:#0a1c2f;
     padding:.5rem;
 }
-
-
 /*container holding an image and text on home page*/
 .container{
     position:relative;
@@ -136,8 +132,9 @@ main h3{
     color:#ffffff;
 }
 .heroImg{
+    width:100%;
     max-width:100%;
-    height:auto;
+    height:50%;
 }
 .heroText{
     position:absolute;
@@ -213,7 +210,7 @@ main h3{
 
 /*css for the temple page*/
 .temples{
-    height:400px;
+    height:auto;
     border:1px solid red;
 }
 
