--- a/lesson13/css/small.css
+++ b/lesson13/css/small.css
@@ -99,6 +99,7 @@ nav a.active{background-color:#f41f31;
     padding:12px 16px;
     display:block;
     text-align:center;
+    
 }
 .dropdown_content a:hover{
     background-color:#dea325;
@@ -126,7 +127,7 @@ main h3{
 /*container holding an image and text on home page*/
 .container{
     position:relative;
-    margin:10px auto;
+    margin:0;
     max-width:100%;
     height:auto;
     text-align:center;
@@ -225,12 +226,9 @@ main h3{
     box-shadow: 3px 3px 3px grey;
     border-radius: 10px;
 }
-
 .temple_closure{
     display: grid;
-    grid-template-columns: 1fr;
-    
-    
+    grid-template-columns: 1fr;  
 }
 .temple_closure p {
     padding:.2rem;
@@ -239,10 +237,7 @@ main h3{
     padding: .1rem;
     font-style: italic;
 }
-.temple_closure section:nth-child(even){
-    flex-direction:row-reverse;
 
-}
 
 /*css for the reservation page form*/
 
@@ -303,9 +298,11 @@ form input.submitBtn{
 .amenitiesHeading{
     text-align:center;
     font-size: 2rem;
+    color:#1b498a;
+    margin:1.2rem;
 }
-.amenities_img{
-    margin:10px 0;
+.specialServices, .freeAmenities{
+    padding-left:2rem;
 }
 .specialServices li {
     padding:.8rem;
@@ -322,17 +319,14 @@ form input.submitBtn{
     font-size:2rem;
     font-style:italic;
 }
-.reception img{
-    display:block;
-    overflow:hidden;
-    margin:1rem 0;
-    width:100%;
-    height:auto
-}
 
 .recep_text{
-    width:60%;
-    margin-left:.8rem;
+    width:100%;
+    max-width:800px;
+    margin-left:2rem;
+    margin-right:2rem;
+    padding:2.5rem;
+    text-align:left;
 }
 .recep_text h4{
     padding:0.3rem;
@@ -354,7 +348,6 @@ form input.submitBtn{
 }
 .missionForm{
     margin-top:2rem;
-    border:1px dashed red;
     margin-bottom:2rem;
     padding-left:2rem;
     background-color:#f2f2f2;
@@ -374,14 +367,16 @@ img {
 }
 .column{
     width:100%;
-    border:1px dashed red;
     margin:2rem auto;
+    padding-left:20px;
    
 }
 .contactDetails h2{
     text-align:center;
     color:#0a1c2f;
     font-size:3rem;
+    font-weight:bold;
+    margin-left:20px;
 
 }
 .physicalAdress{
@@ -498,58 +493,6 @@ form label.top input:required:invalid {
 
 /*---css for home page---*/
 
-
-
-.weatherStory{
-    text-align:center;
-    padding:2rem;
-    font-weight:bold;
-
-}
-.townData section:nth-child(1){order:3;}
-.townData section:nth-child(2){order:1;}
-.townData section:nth-child(3){order:2;}
-
-
-.eventsData{
-    border: 1px solid #bbb;
-    margin-top:40px;
-    text-align: center;
-    padding: .5rem;
-    background-color: #D3D3D3;
-}
-.eventsData h3{
-    font-style:italic;
-
-}
-/*------CSS for the gallery page-----*/
-#gallery{
-    text-align:center;
-    color:#22187F;
-    text-shadow:4px #333;
-
-}
-.img-gallery{
-    display: grid;
-    grid-auto-columns: 1fr;
-    justify-content: center;
-    margin:auto;
-    width:98%;
-}
-.img-gallery figure img{
-    width:100%;
-    height:300px;  
-}
-
-.img-gallery figure{
-    margin:0.5em;
-}
-figcaption{
-    font-size:1.2em;
-    line-height:30px;
-    padding-left:10px;
-}
-
 img[data-src] {
     filter: blur(0.2em);
   }
@@ -560,6 +503,6 @@ img {
 
 .mySlides{
     width:100%;
-    margin:0.5rem auto;
+    margin:0 auto;
     height:400px;
 }
